--- a/css/style.css
+++ b/css/style.css
@@ -2293,7 +2293,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,
 
 @media (max-width: 991.98px) {
     .ftco-navbar-light {
-        background: #22c8ba !important;
+        background: #0093b2 !important;
     }
 }
 
